New Depsgraph not evaluating driver interactively #44709

Closed
opened 2015-05-14 11:59:58 +02:00 by John Cox · 4 comments

System Information
Mac OS X 10.9.5 Build 13F1066
MacBook Pro
Retina, 15-inch, Mid 2014
Processor 2.2 GHz Intel Core i7
Memory 16 GB 1600 MHz DDR3
Graphics Intel Iris Pro 1024 MB

Blender Version
Broken: 2.74.5 Hash 93867ae
Worked: (optional)

Short description of error
Euler rotation of Sun lamp driven by an empty is not updated

Exact steps for others to reproduce the error
Start blender with --enable-new-depsgraph switch. Open attached blend. Select empty and rotate. The Sun lamp does not rotate unless
you select it and press R to activate rotation.
depsgraphtest.blend

**System Information** Mac OS X 10.9.5 Build 13F1066 MacBook Pro Retina, 15-inch, Mid 2014 Processor 2.2 GHz Intel Core i7 Memory 16 GB 1600 MHz DDR3 Graphics Intel Iris Pro 1024 MB **Blender Version** Broken: 2.74.5 Hash 93867ae Worked: (optional) **Short description of error** Euler rotation of Sun lamp driven by an empty is not updated **Exact steps for others to reproduce the error** Start blender with --enable-new-depsgraph switch. Open attached blend. Select empty and rotate. The Sun lamp does not rotate unless you select it and press R to activate rotation. [depsgraphtest.blend](https://archive.blender.org/developer/F174554/depsgraphtest.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JohnCox

Added subscriber: @JohnCox
Sergey Sharybin self-assigned this 2015-05-14 16:26:13 +02:00

This issue was referenced by 0b9a65b2ae

This issue was referenced by 0b9a65b2ae218e3b3f8f56d22673c58255b8a92f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44709
No description provided.