Fix T44709: New Depsgraph not evaluating driver interactively

Issue was caused by drivers which uses component of an array as a target,
this was not handled properly in the RNA path key.